# Inference-Gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  config.yaml  cost.py  docker-compose.yml  gateway.py  lambda_pricing.py  main.py  metrics.py  pyproject.toml  request_logger.py  review_report.md  technique.py  test_gateway.py  test_gateway.sh  tracing.py
.claude/: settings.local.json
.github/workflows/: ci.yml
backends/: RemoteBackend.py  __init__.py  backend.py  echo.py  remote.py  vllm.py
docs/: api-reference.md  architecture.md  cloud-deployment.md  configuration.md  engine-routing.md  internals-report.md  observability.md  testing-results.md
monitoring/: nginx-gateway-lb.conf  prometheus.yml
monitoring/grafana/dashboards/: gateway-overview.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
scripts/: _common.sh  ab_arms.example.sh  benchmark.py  run_experiments.sh  run_server_ab.sh  setup_vllm_remote.sh  ssh_tunnel.sh
scripts/vllm_engine/: _common.sh  baseline.sh  baseline_strict.sh  chunked_prefill.sh  chunked_prefill_and_prefix_caching.sh  prefix_caching.sh  run_engine_fleet.sh  speculative_decoding.sh
tasks/: changes.md  todo.md
workloads/: pyproject.toml  workload.py
